--- a/barter/templates/barter/index.html
+++ b/barter/templates/barter/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8 mx-auto text-center mb-4">
-        <h1 class="display-4">Добро пожаловать на BarterSwap!</h1>
+        <h1 class="display-4">Добро пожаловать на BarterSwap! Вам тут не рады</h1>
         <p class="lead">Меняй вещи без денег</p>
         <a href="{% url 'barter:create_item' %}" class="btn btn-primary btn-lg">Добавить вещь</a>
     </div>
