--- a/barter/templates/barter/users/profile.html
+++ b/barter/templates/barter/users/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'barter/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -9,7 +9,7 @@
             {% if user.profile.avatar %}
                 <img src="{{ user.profile.avatar.url }}" alt="Аватар" class="avatar-img">
             {% else %}
-                <img src="{% static 'images/default-avatar.png' %}" alt="Аватар" class="avatar-img">
+                <img src="{% static 'barter/images/default-avatar.png' %}" alt="Аватар" class="avatar-img">
             {% endif %}
             <button class="avatar-upload-btn">Изменить фото</button>
         </div>
@@ -27,10 +27,10 @@
 
         <nav class="profile-menu">
             <a href="#" class="menu-item active">Мой профиль</a>
-            <a href="{% url 'my_offers' %}" class="menu-item">Мои предложения</a>
-            <a href="{% url 'exchange_history' %}" class="menu-item">История обменов</a>
-            <a href="{% url 'settings' %}" class="menu-item">Настройки</a>
-            <a href="{% url 'logout' %}" class="menu-item logout">Выйти</a>
+            <a href="{% url 'barter:my_offers' %}" class="menu-item">Мои предложения</a>
+            <a href="{% url 'barter:exchange_history' %}" class="menu-item">История обменов</a>
+            <a href="{% url 'barter:settings' %}" class="menu-item">Настройки</a>
+            <a href="{% url 'barter:logout' %}" class="menu-item logout">Выйти</a>
         </nav>
     </aside>
 
